# simple-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
simple_agent/: __init__.py  agent.py  config.py
simple_agent/backends/: base.py  chatgpt.py  factory.py  gemini.py
simple_agent/tools/: __init__.py  base.py  file_read_tool.py  math_tool.py  python_tool.py  time_tool.py
tests/: conftest.py  test_agent.py  test_python_tool.py
